k8s/infrastructure/kube-prometheus-stack/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${NAME}
  #annotations:
  #  cert-manager.io/cluster-issuer: letsencrypt-prod
  #  traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${NAMESPACE}-${NAME}-grafana
                port:
                  number: 80
  #tls:
  #  - hosts:
  #    - ${DOMAIN}
